# cv

./: .gitignore  README.md  cv.cls  cv.typ  deno.json  index.js  index.ts  main.py  main.yml  package.json  publications.bib  publications.yml  pyproject.toml  scripts.json  template.tex.hbs
.github/workflows/: compile-resume.yml
latex/: cv.tex  erdos.bib  main.tex
src/cv/: __init__.py  schema.py  tex.py
templates/: main.tex.hbs
templates/tex/: main.tex.hbs  resume.cls
