[project]
name = "cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=4.10.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[tool.uv]
package = true

[project.scripts]
cv = "main:main"

[dependency-groups]
dev = [
    "ipython>=9.8.0",
]
