[project]
name = "cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=4.10.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "watchfiles>=1.1.1",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = ["src"]

[tool.uv]
package = true

[project.scripts]
cv = "cv:main"

[dependency-groups]
dev = [
    "ipython>=9.8.0",
    "ruff>=0.15.10",
]
